# ai-multi-agent

./: .env.example  .gitignore  404.html  Dockerfile  README.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  tax_shopping.json  vat_rates.json
.github/workflows/: publish_docs.yml
docs/: architecture.md  capabilities.md  index.md  linkedin_article.md  setup.md
scripts/: demo_stage_1.py  demo_stage_2.py  list_models.py  seed_policies.py  verify_all.py  verify_import.py  verify_stage_1.py
site/: 404.html  architecture.html  capabilities.html  index.html  setup.html
site/architecture/: index.html
site/capabilities/: index.html
site/search/: search_index.json
site/setup/: index.html
src/govuk_content_agents/: __init__.py  config.py  logging_config.py
src/govuk_content_agents/agents/: __init__.py  base.py  consistency.py  content_reviewer.py  debate.py  improvement.py  persona.py  quality_judge.py  style_compliance.py  template.py
src/govuk_content_agents/data/: external_policies.py  personas.py
src/govuk_content_agents/orchestration/: graph.py  state.py
src/govuk_content_agents/storage/: __init__.py  models.py  mongodb.py  vectors.py
src/govuk_content_agents/templates/: govuk_patterns.py
src/govuk_content_agents/ui/: app.py  components.py
src/govuk_content_agents/ui/pages/: analytics.py  create.py  debate.py  knowledge_base.py  lab.py  review.py
src/govuk_content_agents/utils/: analytics.py  web.py
tests/: conftest.py
tests/integration/: test_graph.py
tests/unit/: test_agents.py  test_config.py  test_consistency.py  test_improvement.py  test_quality_judge.py  test_style_compliance.py
