[project]
name = "ai-multi-agent"
version = "0.1.0"
description = "Multi-agent AI system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=0.2.0",
    "google-api-core>=2.0.0",
    "openai>=1.59.0",
    "langgraph>=0.2.60",
    "streamlit>=1.41.0",
    "motor>=3.6.0",
    "psycopg2-binary>=2.9.10",
    "pgvector>=0.3.6",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
    "black>=24.10.0",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/govuk_content_agents"]

